# ModelResolver

./: CMakeLists.txt  README.md
EquationResolver/: CMakeLists.txt
EquationResolver/header/: EquationFabric.h  EquationRules.h
EquationResolver/header/EquationMaking/: EquationCreator.h  EquationFabric.h  EquationRules.h
EquationResolver/header/EquationMaking/rules/: macro.h
EquationResolver/header/EquationNodes/: EquationNode.h  NamedEquationNode.h  TypedEquationNode.h  ValueStorage.h
EquationResolver/tests/: EquationFabricTest.cpp  TypedEquationNodeTests.cpp
